--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "webpack": "webpack",
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "build": "tsc --build"
   },
   "repository": {
     "type": "git",
