--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
-  "dependencies": { },
+  "scripts": {
+    "webpack": "webpack",
+    "dev": "webpack serve",
+    "build": "tsc --build",
+    "lint": "eslint src/**/*.ts"
+  },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.2.0",
     "ts-loader": "^9.2.6",
     "webpack": "^5.64.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.5.0"
-  },
-  "scripts": {
-    "webpack": "webpack",
-    "dev": "webpack serve",
-    "build": "tsc --build"
   },
   "repository": {
     "type": "git",
